# atmosBot_simulation

./: .gitignore
install/: local_setup.sh  setup.sh
install/test_bot/share/ament_index/resource_index/package_run_dependencies/: test_bot
install/test_bot/share/ament_index/resource_index/parent_prefix_path/: test_bot
install/test_bot/share/test_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/test_bot/share/test_bot/cmake/: test_botConfig-version.cmake  test_botConfig.cmake
install/test_bot/share/test_bot/environment/: ament_prefix_path.dsv  path.dsv
install/test_bot/share/test_bot/launch/: gz.launch.py  mobile_bot.launch.py  test.launch.py
install/test_bot/share/test_bot/meshes/: arm_base.stl  bicep.stl  elbow.stl  robot_base.stl  wheel.stl  wrist.stl
install/test_bot/share/test_bot/models/: mobile_bot.urdf  mobile_robot.urdf
install/test_bot/share/test_bot/models/NotYetRoboy/: model.config  model.sdf
install/test_bot/share/test_bot/models/TestHouse/: model.config  model.sdf
install/test_bot/share/test_bot/models/cylinder_bot/: model.config  model.sdf
install/test_bot/share/test_bot/models/mobile_bot_description/: model.config  model.sdf
install/test_bot/share/test_bot/models/mobile_bot_description/meshes/: arm_base.stl  bicep.stl  elbow.stl  robot_base.stl  wheel.stl  wrist.stl
install/test_bot/share/test_bot/models/test_bot/: model.config  model.sdf
install/test_bot/share/test_bot/rviz/: urdf_config.rviz
install/test_bot/share/test_bot/worlds/: environment.world.sdf  test.world.sdf  testing_environment.world.sdf
log/: latest_build
src/atmos_bot/: CMakeLists.txt  package.xml
src/atmos_bot/action/: Wander.action
src/atmos_bot/behavior_trees/: behavior_tree_wander.xml
src/atmos_bot/config/: slam_toolbox.yaml
src/atmos_bot/launch/: aws_world.launch.py
src/atmos_bot/meshes/: bot_base.stl
src/atmos_bot/models/mobile_bot_description/: model.config
src/atmos_bot/src/: avoid_obstacles.cpp  wander.cpp
src/atmos_bot/src/wander_plugin/: wander_plugin.cpp  wander_plugin_header
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/my_robot/share/my_robot/: local_setup.sh  package.sh  package.xml
src/install/my_robot/share/my_robot/models/test_bot/: model.config
src/install/my_robot/share/my_robot/worlds/: testing_environment.world.sdf
src/install/test_bot/share/test_bot/: local_setup.sh  package.sh
src/install/test_bot/share/test_bot/worlds/: environment.world.sdf
src/test_bot/: CMakeLists.txt  package.xml
src/test_bot/config/: ekf.yaml  nav2_bringup.yaml  slam_toolbox.yaml
src/test_bot/launch/: aws_world.launch.py  gz.launch.py  mobile_bot.launch.py  test.launch.py
src/test_bot/models/: mobile_bot.urdf
src/test_bot/models/NotYetRoboy/: model.config
src/test_bot/models/house_bones/: model.config  model.sdf
src/test_bot/models/house_bones_2/: model.config  model.sdf
src/test_bot/models/mobile_bot_description/: model.sdf
src/test_bot/models/mobile_bot_description/meshes/: robot_base.stl
src/test_bot/src/: avoid_obstacles.cpp  read_laser.cpp  spin_robot.cpp  wander.cpp
src/test_bot/src/wander_plugin/: wander_plugin.cpp  wander_plugin_header
src/test_bot/worlds/: aws_house_bot.world  mobile_bot.world.sdf  mobile_bot_2.world
(+1 files in other folders)
